--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "basic-ftp": "^5.0.5",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -25,6 +26,7 @@
     "moment-timezone": "^0.5.45",
     "mongoose-morgan": "^1.0.17",
     "mssql": "^9.1.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.8.0",
@@ -33,6 +35,7 @@
     "pg-hstore": "^2.3.4",
     "save": "^2.9.0",
     "sequelize": "^6.25.5",
+    "stream": "^0.0.2",
     "tedious": "^16.1.0"
   },
   "devDependencies": {
